--- a/clusters/foxbat/argocd/templates/argocd/argocd-application.yaml
+++ b/clusters/foxbat/argocd/templates/argocd/argocd-application.yaml
@@ -16,3 +16,7 @@ spec:
   destination:
     namespace: argocd
     server: "https://kubernetes.default.svc"
+  syncPolicy:
+    automated:
+      enabled: true
+      selfHeal: true
