--- a/kindconfig.yaml
+++ b/kindconfig.yaml
@@ -3,6 +3,10 @@ apiVersion: kind.x-k8s.io/v1alpha4
 name: foxbat-cluster
 nodes:
   - role: control-plane
+    extraPortMappings:
+      - containerPort: 30080
+        hostPort: 8080
+        protocol: TCP
   - role: worker
   - role: worker
   - role: worker
