--- a/clusters/foxbat/argocd-apps/templates/application-prometheus.yaml
+++ b/clusters/foxbat/argocd-apps/templates/application-prometheus.yaml
@@ -14,7 +14,7 @@ spec:
       valueFiles:
         - values.yaml
   destination:
-    namespace: prometheus-stack
+    namespace: prometheus
     server: "https://kubernetes.default.svc"
   syncPolicy:
     automated:
