--- a/clusters/foxbat/services/prometheus/values.yaml
+++ b/clusters/foxbat/services/prometheus/values.yaml
@@ -7,3 +7,6 @@ kube-prometheus-stack:
     enabled: false
   kubeStateMetrics:
     enabled: false
+  prometheus:
+    service:
+      type: NodePort
